<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/add_comment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#00BCD4"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#6F6F6F"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/userComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/add_comment_add"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</FrameLayout>