<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentEditEvent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_event"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/EventPic"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:adjustViewBounds="false"
                    android:foregroundGravity="center"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="1dp"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>

            <ImageView
                android:id="@+id/addPicBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_camera_alt_24" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_event_edit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/eventNameType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2175F3"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/description_edit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/eventDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2175F3"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/address_edite"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/eventAddress_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2175F3"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/level_of_risk_edit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <Spinner
                    android:id="@+id/levelOfRisk_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="206dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#63D368"
                android:text="@string/save_bth_edit"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>