<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="1dp"
    android:paddingTop="1dp"
    android:paddingRight="1dp"
    android:paddingBottom="1dp"
    tools:context=".FragmentAddEvent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/eventbeck">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="1dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_event"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/EventImage"
                    android:layout_width="105dp"
                    android:layout_height="118dp"
                    android:adjustViewBounds="false"
                    android:foregroundGravity="center"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="1dp"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>

            <ImageView
                android:id="@+id/AddPicBtn"
                android:layout_width="87dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_camera_alt_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/event_type_add"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/eventName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/description_add"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/eventDesc"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/eventaddress"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/event_address_add"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/ProuductQuantity"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/Level_of_risk_add"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/level_of_risk_add"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <Spinner
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                </Spinner>

            </LinearLayout>

            <Button
                android:id="@+id/addBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#63D368"
                android:text="@string/add_bth"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>